# django-models

./: README.md  pyproject.toml
snack_tracker_project/: README.md  db.sqlite3  pyproject.toml
snack_tracker_project/snack_tracker_project/: settings.py  urls.py
snack_tracker_project/snacks/: models.py  tests.py  urls.py  views.py
snack_tracker_project/snacks/migrations/: 0001_initial.py
snack_tracker_project/templates/: base.html  snack_detail.html  snack_list.html
